--- a/src/IntermediarySearchService.Infrastructure/IntermediarySearchService.Infrastructure.csproj
+++ b/src/IntermediarySearchService.Infrastructure/IntermediarySearchService.Infrastructure.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Ardalis.Specification.EntityFrameworkCore" Version="6.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IntermediarySearchService.Core\IntermediarySearchService.Core.csproj" />
+  </ItemGroup>
+
 </Project>
