--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "axios": "^1.2.3",
     "classnames": "^2.3.2",
     "heroicons": "^2.0.13",
     "link-preview-js": "^3.0.4",
