--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.2.3",
     "classnames": "^2.3.2",
     "heroicons": "^2.0.13",
+    "history": "^5.3.0",
     "link-preview-js": "^3.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
