--- a/src/IntermediarySearchService.Api/IntermediarySearchService.Api.csproj
+++ b/src/IntermediarySearchService.Api/IntermediarySearchService.Api.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>5c8c4c22-2cff-43b0-bb29-e61b33c787b7</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
