--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -21,6 +21,7 @@
     "history": "^5.3.0",
     "link-preview-js": "^3.0.4",
     "multi-range-slider-react": "^2.0.2",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.3",
