Localization nav and order pages

--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -19,12 +19,16 @@
     "classnames": "^2.3.2",
     "heroicons": "^2.0.13",
     "history": "^5.3.0",
+    "i18next": "^22.4.9",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
     "link-preview-js": "^3.0.4",
     "multi-range-slider-react": "^2.0.2",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.3",
+    "react-i18next": "^12.1.5",
     "react-icons": "^4.6.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
