--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -37,6 +37,7 @@
     "react-tiny-link": "^3.6.1",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
