Email sender and registration page

--- a/src/IntermediarySearchService.Api/appsettings.json
+++ b/src/IntermediarySearchService.Api/appsettings.json
@@ -9,5 +9,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "API_URL": "https://localhost:44349",
+  "CLIENT_URL": "https://localhost:3000/"
 }
