Admin actions and fix bugs

--- a/src/IntermediarySearchService.Api/appsettings.json
+++ b/src/IntermediarySearchService.Api/appsettings.json
@@ -11,5 +11,5 @@
   },
   "AllowedHosts": "*",
   "API_URL": "https://localhost:44349",
-  "CLIENT_URL": "https://localhost:3000/"
+  "CLIENT_URL": "http://localhost:3000"
 }
