--- a/src/IntermediarySearchService.Api/appsettings.json
+++ b/src/IntermediarySearchService.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "AppDbContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=IntermediarySearchService.AppDb;Integrated Security=True;",
-    "IdentityDbContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=IntermediarySearchService.IdentityDb;Integrated Security=True;"
+    "AppDbContext": "User ID=root;Password=24nxAsOWbC;Host=db-data;Port=5432;Database=IntermediarySearchService.AppDb;",
+    "IdentityDbContext": "User ID=root;Password=1CVJg1GxJW;Host=db-identity;Port=5432;Database=IntermediarySearchService.IdentityDb;"
   },
   "Logging": {
     "LogLevel": {
@@ -10,6 +10,6 @@
     }
   },
   "AllowedHosts": "*",
-  "API_URL": "https://localhost:44349",
-  "CLIENT_URL": "http://localhost:3000"
+  "API_URL": "https://localhost:5001",
+  "CLIENT_URL": "http://localhost:5010"
 }
