Change to env variables

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -15,3 +15,8 @@ services:
   client:
     ports:
       - "5010:3000"
+    environment:
+        - IP=${IP}
+        - API_KEY_GEOCODER=${API_KEY_GEOCODER}
+        - API_KEY_CORS=${API_KEY_CORS}
+        - CORS_URL=${CORS_URL}
