--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -16,7 +16,8 @@ services:
     ports:
       - "5050:3000"
     environment:
-        - REACT_APP_IP=${IP}
         - REACT_APP_API_KEY_GEOCODER=${API_KEY_GEOCODER}
         - REACT_APP_API_KEY_CORS=${API_KEY_CORS}
         - REACT_APP_CORS_URL=${CORS_URL}
+        - REACT_APP_PROXY_IP=${PROXY_IP}
+        - REACT_APP_PROXY_PORT=${PROXY_PORT}
