--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,27 @@ services:
     depends_on:
         - db-data
         - db-identity
+        - proxy
     build:
       context: .
       dockerfile: src/IntermediarySearchService.Api/Dockerfile
+
+  proxy:
+    image: nginx:latest
+    ports:
+      - 80:80
+      - 443:443
+    restart: always
+    volumes:
+      - ./nginx/conf/:/etc/nginx/conf.d/:ro
+      - ./certbot/www:/var/www/certbot/:ro
+      - ./certbot/conf/:/etc/nginx/ssl/:ro
+
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
 
   client:
     container_name: client
