--- a/frontend-app/Dockerfile
+++ b/frontend-app/Dockerfile
@@ -1,9 +1,6 @@
 FROM node:lts-alpine
 ENV NODE_ENV=production
 
-ARG REACT_APP_IP
-ENV REACT_APP_IP=$IP
-
 ARG REACT_APP_API_KEY_GEOCODER
 ENV REACT_APP_API_KEY_GEOCODER=$API_KEY_GEOCODER
 
@@ -12,6 +9,12 @@ ENV REACT_APP_API_KEY_CORS=$API_KEY_CORS
 
 ARG REACT_APP_CORS_URL
 ENV REACT_APP_CORS_URL=$CORS_URL
+
+ARG REACT_APP_PROXY_IP
+ENV REACT_APP_PROXY_IP=$PROXY_IP
+
+ARG REACT_APP_PROXY_PORT
+ENV REACT_APP_PROXY_PORT=$PROXY_PORT
 
 WORKDIR /app
 COPY ["package.json", "package-lock.json*", "npm-shrinkwrap.json*", "./"]
