--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,27 +7,23 @@ services:
     depends_on:
         - db-data
         - db-identity
-        - proxy
     build:
       context: .
       dockerfile: src/IntermediarySearchService.Api/Dockerfile
 
   proxy:
+    container_name: proxy
     image: nginx:latest
     ports:
       - 80:80
       - 443:443
     restart: always
+    depends_on:
+        - client
+        - backend
     volumes:
-      - ./nginx/conf/:/etc/nginx/conf.d/:ro
-      - ./certbot/www:/var/www/certbot/:ro
-      - ./certbot/conf/:/etc/nginx/ssl/:ro
-
-  certbot:
-    image: certbot/certbot:latest
-    volumes:
-      - ./certbot/www/:/var/www/certbot/:rw
-      - ./certbot/conf/:/etc/letsencrypt/:rw
+      - ./nginx.conf/:/etc/nginx/nginx.conf:ro
+      - ./certs/:/etc/ssl/:ro
 
   client:
     container_name: client
