--- a/nginx.conf
+++ b/nginx.conf
@@ -11,9 +11,7 @@ http {
         listen [::]:80;	
         server_name _;
 
-        location / {
-            proxy_pass https://client:3000;
-        }
+		return 301 https://$host;
     }
 
     server {
@@ -21,8 +19,12 @@ http {
 		listen [::]:443 ssl http2;
         server_name _;
 
-		ssl_certificate /etc/nginx/ssl/live/example.org/fullchain.pem;
-		ssl_certificate_key /etc/nginx/ssl/live/example.org/privkey.pem;
+		ssl_certificate      /etc/ssl/certificate.crt; 
+		ssl_certificate_key  /etc/ssl/private.key;
+
+        location / {
+            proxy_pass http://client:3000;
+        }
 
         location /api/ {
             proxy_pass         http://backend:80/api/;
