--- a/frontend-app/Dockerfile
+++ b/frontend-app/Dockerfile
@@ -10,11 +10,8 @@ ENV REACT_APP_API_KEY_CORS=$API_KEY_CORS
 ARG REACT_APP_CORS_URL
 ENV REACT_APP_CORS_URL=$CORS_URL
 
-ARG REACT_APP_PROXY_IP
-ENV REACT_APP_PROXY_IP=$PROXY_IP
-
-ARG REACT_APP_PROXY_PORT
-ENV REACT_APP_PROXY_PORT=$PROXY_PORT
+ARG REACT_APP_IP
+ENV REACT_APP_IP=$IP
 
 WORKDIR /app
 COPY ["package.json", "package-lock.json*", "npm-shrinkwrap.json*", "./"]
