--- a/src/IntermediarySearchService.Api/appsettings.json
+++ b/src/IntermediarySearchService.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "AppDbContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=IntermediarySearchService.AppDb;Integrated Security=True;",
-    "IdentityDbContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=IntermediarySearchService.IdentityDb;Integrated Security=True;"
+    "AppDbContext": "Server=localhost,1439;Initial Catalog=IntermediarySearchService.AppDb;Integrated Security=True;User Id=sa;Password=pass;",
+    "IdentityDbContext": "Server=localhost,1439;Initial Catalog=IntermediarySearchService.IdentityDb;Integrated Security=True;User Id=sa;Password=pass;"
   },
   "Logging": {
     "LogLevel": {
