--- a/src/IntermediarySearchService.Api/appsettings.Development.json
+++ b/src/IntermediarySearchService.Api/appsettings.Development.json
@@ -1,8 +1,15 @@
 {
+  "ConnectionStrings": {
+    "AppDbContext": "User ID=root_user;Password=pass12345;Host=postgres;Port=5432;Database=IntermediarySearchService.AppDb;Integrated Security=true;",
+    "IdentityDbContext": "User ID=root_user;Password=pass12345;Host=postgres;Port=5432;Database=IntermediarySearchService.IdentityDb;Integrated Security=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "API_URL": "https://localhost:5000",
+  "CLIENT_URL": "http://localhost:3000"
 }
